--- a/package.json
+++ b/package.json
@@ -7,21 +7,36 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seed.ts",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:build": "docker-compose build",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.7.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-tabs": "^1.0.4",
+    "@prisma/client": "^5.7.1",
+    "@tiptap/extension-heading": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "mongodb": "^6.3.0",
     "next": "^14.0.3",
+    "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,8 +47,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/mongodb": "^4.0.7",
-    "prisma": "^5.7.0",
+    "@types/pg": "^8.10.9",
+    "prisma": "^5.7.1",
     "ts-node": "^10.9.1"
   }
 }
