Updated database schema and environment configuration

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PostgreSQL Database
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://denning:denningpass@localhost:5432/denning_db?schema=public"
 
 # Docker PostgreSQL
 POSTGRES_USER=denning
