committed files to new branch

--- a/.env
+++ b/.env
@@ -1,24 +1,30 @@
-# PostgreSQL Database
-DATABASE_URL="postgresql://denning:denningpass@localhost:5432/denning_db?schema=public"
-
-# Docker PostgreSQL
+# Database Configuration
 POSTGRES_USER=denning
 POSTGRES_PASSWORD=denningpass
 POSTGRES_DB=denning_db
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
 
-# Docker PgAdmin
+# PgAdmin Configuration
 PGADMIN_EMAIL=admin@denning.com
 PGADMIN_PASSWORD=admin
 
-# Next Auth
+# Next Auth Configuration
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret
+NEXTAUTH_SECRET=denning_development_secret_key
 
-# Storage (for document uploads)
-STORAGE_ACCESS_KEY=your_storage_access_key
-STORAGE_SECRET_KEY=your_storage_secret_key
-STORAGE_BUCKET=your_storage_bucket
-STORAGE_REGION=your_storage_region
+# OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# LangGraph Configuration
+LANGGRAPH_URL=http://localhost:8123
+LANGGRAPH_API_KEY=your_langgraph_api_key
+
+# Storage Configuration
+STORAGE_ACCESS_KEY=development_access_key
+STORAGE_SECRET_KEY=development_secret_key
+STORAGE_BUCKET=denning-dev
+STORAGE_REGION=us-east-1
 
 # SMTP Configuration
 SMTP_HOST=smtp.gmail.com
