--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "denning",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +12,7 @@
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} prisma/seed.ts",
+    "db:seed": "prisma db seed",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "docker:build": "docker-compose build",
@@ -18,7 +21,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^5.22.0",
     "@tiptap/extension-heading": "^2.10.3",
     "@tiptap/extension-table": "^2.10.3",
     "@tiptap/extension-table-cell": "^2.10.3",
@@ -27,7 +30,6 @@
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.10.1",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
@@ -37,18 +39,20 @@
     "next": "^14.0.3",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
+    "otplib": "^12.0.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@types/pg": "^8.10.9",
     "prisma": "^5.7.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
