--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Database Configuration
 POSTGRES_USER=denning
 POSTGRES_PASSWORD=denningpass
-POSTGRES_DB=denning_db
+POSTGRES_DB=denning
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
 
 # PgAdmin Configuration
-PGADMIN_EMAIL=admin@denning.com
+PGADMIN_EMAIL=ngigewinston@gmail.com
 PGADMIN_PASSWORD=admin
 
 # Next Auth Configuration
