--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,27 @@
-version: '3.8'
 services:
   postgres:
-    image: postgres:latest
     container_name: denning_db
-    restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+    image: postgres:latest
     networks:
-      - denning_network
+      denning_network: null
+    ports:
+      - mode: ingress
+        target: 5432
+        published: "5432"
+        protocol: tcp
+    restart: always
+    volumes:
+      -  ./initdb:/docker-entrypoint-initdb.d
+
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U denning"]
       interval: 5s
       timeout: 5s
-      retries: 5
+      retries: 10
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -34,6 +37,12 @@ services:
         condition: service_healthy
     networks:
       - denning_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U denning"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
 
 volumes:
   postgres_data:
