--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "mongodb": "^6.11.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
