--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PostgreSQL Database
-DATABASE_URL="postgresql://denning:denningpass@localhost:5432/denning_db?schema=public"
+DATABASE_URL="postgresql://denning:denningpass@postgres:5432/denning_db?schema=public"
 
 # Docker PostgreSQL
 POSTGRES_USER=denning
