--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,29 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U denning"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - denning_network
+
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: denning_app
+    restart: always
+    ports:
+      - "3000:3000"
+    environment:
+      - DATABASE_URL=postgresql://denning:denningpass@postgres:5432/denning_db?schema=public
+      - NODE_ENV=development
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: sh -c "npx prisma migrate deploy && npm start"
     networks:
       - denning_network
 
