Refactor environment configuration, update NextAuth integration, and enhance authentication flow
- Removed Docker PostgreSQL and PgAdmin configurations from .env
- Added Google OAuth credentials to .env
- Updated API URL in next.config.js to match the new backend
- Enhanced session management in Header component to include sign-in/sign-out functionality
- Updated NextAuth API handler to include error handling for missing environment variables
- Removed unused forgot-password API endpoint
- Updated package dependencies including MongoDB adapter and Next.js packages

--- a/.env
+++ b/.env
@@ -1,18 +1,9 @@
 # PostgreSQL Database
 DATABASE_URL="postgresql://denning:denningpass@localhost:5432/denning_db?schema=public"
 
-# Docker PostgreSQL
-POSTGRES_USER=denning
-POSTGRES_PASSWORD=denningpass
-POSTGRES_DB=denning_db
-
-# Docker PgAdmin
-PGADMIN_EMAIL=admin@denning.com
-PGADMIN_PASSWORD=admin
-
 # Next Auth
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=your_nextauth_secret
+NEXTAUTH_SECRET=askjgfasfbasu%7qwe89wqeyha*&QTcavsjas
 
 # Storage (for document uploads)
 STORAGE_ACCESS_KEY=your_storage_access_key
@@ -26,3 +17,9 @@ SMTP_PORT=465
 SMTP_USER=your-email@gmail.com
 SMTP_PASSWORD=your-app-specific-password
 SMTP_FROM="Denning <noreply@denning.com>"
+
+GOOGLE_CLIENT_ID=689796066214-buvnha4na98v49jhsn6ufec4bl87o2od.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+MONGODB_URI="mongodb+srv://space:denninZKKqQRXlJ99kFBtGgpass@cluster0.zqzqz.mongodb.net/denning?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI="mongodb+srv://space:ZKKqQRXlJ99kFBtG@cluster1.bzxbeha.mongodb.net/denning?retryWrites=true&w=majority&appName=Cluster1"
