--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.7.4",
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.7.1",
@@ -34,7 +35,7 @@
     "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "mongodb": "^6.11.0",
+    "mongodb": "^6.12.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
