--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.8.4",
     "next": "^14.0.3",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.16",
