logic handling for chatting and implemented redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,8 +52,16 @@ services:
     networks:
       - denning_network
 
+  redis:
+    image: redis:alpine
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/data
+
 volumes:
   postgres_data:
+  redis_data:
 
 networks:
   denning_network:
