--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "redis": "^4.7.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
     "zod": "^3.22.4"
