--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "redis": "^4.7.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2",
+    "uuid": "^11.0.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/pg": "^8.10.9",
+    "@types/uuid": "^10.0.0",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.1"
   }
